examples/datalog/13_performance/09_sparse_tree.dl.out
Executing script: examples/datalog/13_performance/09_sparse_tree.dl

> .db create test_sparse_tree
Database 'test_sparse_tree' created.
Switched to database: test_sparse_tree
> .db use test_sparse_tree
Switched to database: test_sparse_tree
> +parent[(2, 1), (3, 1), (4, 2), (5, 2), (6, 3), (7, 3), (8, 4), (9, 4), (10, 5), (11, 5), (12, 6), (13, 6), (14, 7), (15, 7)].
Inserted 14 facts into 'parent'.
> view ancestor(X: int, A: int) :- parent(X, A).
View 'ancestor' registered.
> view ancestor(X: int, A: int) :- parent(X, P), ancestor(P, A).
Rule added to view 'ancestor' (2 rules total).
> ?- ancestor(X, A).
34 rows:
  (2, 1)
  (3, 1)
  (4, 1)
  (4, 2)
  (5, 1)
  (5, 2)
  (6, 1)
  (6, 3)
  (7, 1)
  (7, 3)
  (8, 1)
  (8, 2)
  (8, 4)
  (9, 1)
  (9, 2)
  (9, 4)
  (10, 1)
  (10, 2)
  (10, 5)
  (11, 1)
  (11, 2)
  (11, 5)
  (12, 1)
  (12, 3)
  (12, 6)
  (13, 1)
  (13, 3)
  (13, 6)
  (14, 1)
  (14, 3)
  (14, 7)
  (15, 1)
  (15, 3)
  (15, 7)
> view depth(1: int, 0: int) :- parent(_, 1).
View 'depth' registered.
> view depth(1: int, 0: int) :- !parent(_, 1).
Rule added to view 'depth' (2 rules total).
> view depth(X: int, D+1: int) :- parent(X, P), depth(P, D).
Rule added to view 'depth' (3 rules total).
> view ancestor_count(X: int, count<A>: int) :- ancestor(X, A).
View 'ancestor_count' registered.
> ?- ancestor_count(X, C).
Script error: Line 36: Query execution failed: Rule has no positive body atoms
