examples/datalog/13_performance/09_sparse_tree.dl
// Test: Sparse Tree Structure
// Category: Performance
// Verifies: Efficient traversal of tree-like sparse graphs

.db create test_sparse_tree
.db use test_sparse_tree

// Binary tree structure (sparse - each node has at most 2 children)
//              1
//           /     \
//          2       3
//         / \     / \
//        4   5   6   7
//       /|  /|  /|  /|
//      8 9 10 11 12 13 14 15

+parent[(2, 1), (3, 1),
        (4, 2), (5, 2), (6, 3), (7, 3),
        (8, 4), (9, 4), (10, 5), (11, 5), (12, 6), (13, 6), (14, 7), (15, 7)].

// Ancestor relation
view ancestor(X: int, A: int) :- parent(X, A).
view ancestor(X: int, A: int) :- parent(X, P), ancestor(P, A).

// All ancestors
?- ancestor(X, A).

// Depth from root (root has depth 0)
view depth(1: int, 0: int) :- parent(_, 1).
view depth(1: int, 0: int) :- !parent(_, 1).
view depth(X: int, D+1: int) :- parent(X, P), depth(P, D).

// Note: depth rule may not work as expected without base case
// Using alternative: count ancestors
view ancestor_count(X: int, count<A>: int) :- ancestor(X, A).
?- ancestor_count(X, C).

// Descendants of node 2
view descendant(2: int, X: int) :- parent(X, 2).
view descendant(2: int, X: int) :- parent(X, Y), descendant(2, Y).
?- descendant(2, X).

// Leaf nodes (no children)
view has_child(P: int) :- parent(_, P).
view leaf(X: int) :- parent(X, _), !has_child(X).
?- leaf(X).

// Cleanup
.db use default
.db drop test_sparse_tree
